final reports of workout 1

--- a/report/workout1-lena-kan.Rmd
+++ b/report/workout1-lena-kan.Rmd
@@ -59,7 +59,7 @@ facet_shot_chart <- ggplot(data=stacked_tables)+annotation_custom(court_image, -
 > Looking at the shot charts of all 5 golden state warrior players, Kevin Durant has a tendency to shoot frequently from within the key and outside on the rim, and has a high shooting percentage of 60.7% for his two pointers, and successfully makes 38.7% of his three pointers, making him an outstanding and effective shooter on the Golden State Warriors team. He also took a whooping number of 915 shots in total during that basketball season, reaching a mean shot distance of 13.12 inches away from the basket, indicating that he made many of his points through close layups, either through effective Alley Oop Layup shot or a cutting layup-shots. Most of his shots are grouped right under the basket, as he is always ready to receive a pass from a teammate to make that infallible layup of his. His shooting percentage is the highest in the team with an overall percentage of 54.1%. 
 
 ```{r out.width='80%', echo=FALSE, fig.align = 'center'}
-knitr::include_graphics('../images/gsw-shot-charts.jpg')
+knitr::include_graphics('../images/gsw-shot-charts.png')
 ```
 > Stephen Curry never ceases to disappoint either. As one of the world's most famous point guards, Stephen Curry relentlessly proves himself as a necessity to NBA's team and to their wins. Taking even more shots than Durant, 1250 over the entire 2016 season, Curry shoots from an average distance of 18 inches away from the basket, with most of his shot also being cutting layup shots or cutting finger layup shots. Like his teammate Kevin Durant, Curry makes over 54% of his two-point shots, and over 40% of his three-point shots. This makes him a unique point guard, who has an extremely strong shooting percentage from such a far way distance. By taking the most shots out of any one in his team, this outstanding shoot percentage comes at no surprise. Looking at the shot charts of all five players, shots around the three-point rim seem to very dense, and most of the shots are effective, with him making an overall 46.7% pf his shots. 
 
